1.2: 5/??/2024
	* Removed the ZipVersion which seemed artificial and replaced with major/minor numbers.
	* Some method renaming about the version-needed and version-made getters and setters.

1.1: 5/23/2024
	* Fixed some of the logic to allow us to control all bytes in the output Zip.
	* Fixed some of the logic which determined if a data-descriptor was necessary.
	* Added ZipCentralDirectoryEndInfo to be able to control the end structure.
	* Added ZipFileCopy example program which writes identical Zip files.
	* Added some default values to couple of the structures that can be overridden.

1.0: 5/22/2024
	* Fixed a problem with early stream-closing.  Surprised I didn't catch this earlier.
	* Started to add some code examples.

0.9: 5/21/2024
	* Added auto-skipping of file-data in ZipFileInput if you didn't read any data or didn't read to the end.
	* Added initial documentation.  Caused a lot of class renaming.
	* Renamed some modified date/time fields in the ZipFileHeader and ZipCentralDirectoryFileEntry.
	* Renamed DataDescriptor to ZipDataDescriptor.
	* Renamed CentralDirectoryFileHeader to ZipCentralDirectoryFileEntry.
	* Renamed CentralDirectoryFileInfo to ZipCentralDirectoryFileInfo.
	* Renamed CentralDirectoryEnd to ZipCentralDirectoryEnd.

0.8: 5/21/2024
	* Renamed ZipFileReader and ZipFileWriter to ZipFileInput and ZipFileOutput.
	* Added assigning permissions to files written by ZipFileInput.

0.7: 5/20/2024
	* Added better support for Unix and MSDOS file permissions.
	* Added reading from ZipFileReader and writing to a File directly.
	* Added support for writing file-data to the ZipFileWriter via an OutputStream.
	* Added support for reading file-data from the ZipFileReader via an InputStream.
	* Added with...() method chaining to some of the builder classes.
	* Fixed problems with streaming Zip files inside of Zip files because of possibility of reading past the inner one.
	* Fixed problems with compression level flags.

0.6: 5/16/2024